--- a/Frontend/src/scss/style.scss
+++ b/Frontend/src/scss/style.scss
@@ -147,6 +147,11 @@ nav li a {
   font-size: 0.9rem;
 }
 
+.form-floating.input-group .form-control {
+  height: calc(3.5rem + 2px);
+  line-height: 1.25;
+}
+
 // Container widths
 //
 // Set the container width, and override it for fixed navbars in media queries.
